# django-africastalking

./: README.rst  setup.cfg
aft_payment/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
aft_payment/migrations/: 0001_initial.py  0002_alter_b2centries_status_alter_b2crecipient_reason_and_more.py
aft_sms/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
aft_sms/migrations/: 0001_initial.py
django_aft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
