[metadata]
name = django-aft
version = 0.1
description = A Django module implementation of Africas Talking APIs
long_description = file:README.rst
url = https://developers.africastalking.com/docs/
author = Samora Machel
author_email = samoraok@gmail.com
license = MIT License
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Framework :: DJango :: 4.1.5
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires = 
    Django >= 4.1.5
    djangorestframework >= 3.14.0
    africastalking >= 1.2.4